# varsel

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  meson.build
po/: ChangeLog  Makefile.in  Makevars  POTFILES  POTFILES.in  de.po  meson.build
res/: Makefile.am  meson.build  pref-dlg.ui  varsel-appwin.ui  varsel-srcwin.ui  varsel-win.ui  varsel.desktop  varsel.desktop.in  varsel.gresources.xml
resEdit/: Makefile.am  meson.build  pref-srcView.ui  src-menu.ui  va_edit.desktop  va_edit.desktop.in  va_edit.gresources.xml  varsel-srcwin.ui  varsel.gresources.xml
resList/: Makefile.am  app-menu.ui  dlgCopy.ui  dlgExtract.ui  meson.build  va_list.desktop  varsel-win.ui  varsel.desktop.in  varsel.gresources.xml
src/: Archiv.cpp  Archiv.hpp  ArchiveDataSource.cpp  ArchiveDataSource.hpp  DataModel.cpp  DataModel.hpp  DataSource.cpp  DataSource.hpp  EventBus.cpp  EventBus.hpp  FileDataSource.cpp  FileDataSource.hpp  GitDataSource.cpp  GitDataSource.hpp  GitRepository.hpp  Makefile.am  PrefDialog.cpp  PrefDialog.hpp  SourceView.cpp  SourceView.hpp  ThreadWorker.cpp  ThreadWorker.hpp  VarselApp.cpp  VarselApp.hpp  VarselList.cpp  VarselList.hpp  VarselWin.cpp  VarselWin.hpp  meson.build
srcEdit/: CCLangServer.cpp  CCLangServer.hpp  EditApp.cpp  EditApp.hpp  Language.cpp  Language.hpp  LspConf.cpp  LspConf.hpp  LspServer.cpp  LspServer.hpp  Makefile.am  PrefSourceView.cpp  PrefSourceView.hpp  RpcLaunch.cpp  RpcLaunch.hpp  SourceFile.cpp  SourceFile.hpp  SourceView.cpp  SourceView.hpp  meson.build
srcLib/: Archiv.cpp  Archiv.hpp  EventBus.cpp  EventBus.hpp  ExecFactory.cpp  ExecFactory.hpp  ListFactory.cpp  ListFactory.hpp  Makefile.am  SourceFactory.cpp  SourceFactory.hpp  ThreadWorker.hpp  VarselConfig.cpp  VarselConfig.hpp  meson.build
srcList/: Archiv.hpp  ArchiveDataSource.cpp  ArchiveDataSource.hpp  CopyDialog.cpp  CopyDialog.hpp  DataModel.cpp  DataSource.cpp  DataSource.hpp  ExtractDialog.cpp  ExtractDialog.hpp  FileDataSource.cpp  FileDataSource.hpp  GitDataSource.cpp  GitDataSource.hpp  GitRepository.cpp  GitRepository.hpp  ListApp.cpp  ListApp.hpp  ListColumns.cpp  ListColumns.hpp  LookupEntry.cpp  LookupEntry.hpp  Makefile.am  VarselList.cpp  VarselList.hpp  meson.build
srcList/.deps/: varsel-ListApp.Tpo
test/: ArchivTest.cpp  ArchivTest.hpp  CclsTest.cpp  CclsTest.hpp  FileTest.cpp  Git_test.cpp  Git_test.hpp  LspTest.cpp  LspTest.hpp  Makefile.am  WorkerTest.cpp  WorkerTest.hpp  meson.build
